Use immutable set for supported import assertions.